2004-11-13  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/awt/peer/gtk/GdkGraphics2D.java,
	libraries/javalib/gnu/java/awt/peer/gtk/GtkFramePeer.java,
	libraries/javalib/gnu/java/awt/peer/gtk/GtkToolkit.java,
	libraries/javalib/java/awt/print/PrinterJob.java,
	libraries/javalib/javax/swing/JComponent.java,
	libraries/javalib/javax/swing/JDesktopPane.java,
	libraries/javalib/javax/swing/JMenuItem.java,
	libraries/javalib/javax/swing/JTable.java,
	libraries/javalib/javax/swing/JTree.java,
	libraries/javalib/javax/swing/JViewport.java,
	libraries/javalib/javax/swing/RepaintManager.java,
	libraries/javalib/javax/swing/ScrollPaneLayout.java,
	libraries/javalib/javax/swing/ToolTipManager.java,
	libraries/javalib/javax/swing/TransferHandler.java,
	libraries/javalib/javax/swing/plaf/basic/BasicLookAndFeel.java,
	libraries/javalib/javax/swing/plaf/basic/BasicMenuItemUI.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTableHeaderUI.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTextUI.java,
	libraries/javalib/javax/swing/plaf/basic/BasicTreeUI.java,
	libraries/javalib/javax/swing/plaf/basic/BasicViewportUI.java,
	libraries/javalib/javax/swing/text/SimpleAttributeSet.java,
	libraries/javalib/javax/swing/tree/DefaultTreeCellRenderer.java,
	libraries/javalib/javax/swing/tree/DefaultTreeModel.java:
	Resynced with GNU Classpath.

	2004-11-11  Graydon Hoare  <graydon@redhat.com>

        * gnu/java/awt/peer/gtk/GdkGraphics2D.java
        (GdkGraphics2D): Set clip after transform.
        (drawImage): Protect against null image.
        * gnu/java/awt/peer/gtk/GtkFramePeer.java
        (setIconImage): Protect against non-GtkImage args.
        * gnu/java/awt/peer/gtk/GtkToolkit.java
        (checkImage): Protect against non-GtkImage args.
        * java/awt/print/PrinterJob.java:
        (print): Add variant taking PrintRequestAttributeSet.
        (printDialog): Likewise.
        * javax/swing/JComponent.java:
        (transferHandler): New field.