@@ -2993,6 +2993,7 @@ javax/swing/plaf/basic/BasicTableHeaderUI.java
 javax/swing/plaf/basic/BasicTableUI.java
 javax/swing/plaf/basic/BasicTextAreaUI.java
 javax/swing/plaf/basic/BasicTextFieldUI.java
+javax/swing/plaf/basic/BasicTextPaneUI.java
 javax/swing/plaf/basic/BasicTextUI.java
 javax/swing/plaf/basic/BasicToggleButtonUI.java
 javax/swing/plaf/basic/BasicToolBarSeparatorUI.java
